test/extendTruncateError.slq

def extend[a:!â„•](x:uint[a],b:!â„•)qfreeâ‡’((x as ğ”¹^a)~vector(b,0:ğ”¹)) as uint[a+b];
def truncate[a:!â„•](x:uint[a],b:!â„•)qfree{
	(u:ğ”¹^(a sub b))~(v:ğ”¹^b):=x; // error
	forget(v=vector(b,0:ğ”¹));
	return u as uint[a sub b];
}
